fix: course search link and text overlap

--- a/lms/static/sass/_customer-specific.scss
+++ b/lms/static/sass/_customer-specific.scss
@@ -86,3 +86,7 @@ body.view-instructor_statistics main {
 .check-circle {
   display: none !important;
 }
+
+.search-results .search-results-item .result-type {
+  bottom: 10px;
+}
